# nix-cmake-qt-example

./: flake.nix
src/GUI/: CMakeLists.txt  appCore.cpp  appCore.h  default.nix  main.cpp
src/GUI/qml/: main.qml
